# by-a-thread

./: .dockerignore  .gitignore  AGENTS.md  CREDITS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build-apple-intel.sh  build-apple-silicon.sh  build.sh  docker_script.sh  style.md
.windsurf/rules/: coding-standards.md
AppDir/: .DirIcon  AppRun  ByAThread.desktop
client/: Cargo.toml  build.rs  by-a-thread-appimage.desktop  by-a-thread.desktop  icon.rc
client/src/: after_game_chat.rs  assets.rs  build.rs  env.rs  fade.rs  frame.rs  game.rs  in_game.rs  info.rs  lib.rs  lobby.rs  main.rs  main.rs.bak  net.rs  network.rs  obe.rs  player.rs  resources.rs  run.rs  session.rs  state.rs  state_handlers.rs  test_helpers.rs  time.rs  transitions.rs  ui.rs
client/src/game/: handler.rs  handlers.rs  input.rs  obe.rs  state.rs  victory.rs  world.rs
client/src/game/world/: avatar.rs  bullet.rs  maze.rs  sky.rs
client/src/in_game/: handler.rs
client/src/in_game/world/: maze.rs
client/src/info/: circles.rs  crosshairs.rs  map.rs
client/src/info/map/: after_game.rs  initialize.rs  update.rs
client/src/lobby/: flow.rs  handlers.rs  state.rs  state_handlers.rs  ui.rs
client/src/lobby/handlers/: auth.rs  chat.rs  connecting.rs  countdown.rs  difficulty.rs  disconnected.rs  game.rs  passcode.rs  server_address.rs  startup.rs  username.rs  waiting.rs
client/src/lobby/state_handlers/: auth.rs  chat.rs  connecting.rs  countdown.rs  difficulty.rs  passcode.rs  server_address.rs  start_countdown.rs  username.rs  waiting.rs
client/src/lobby/ui/: gui.rs  macroquad.rs
client/src/state_handlers/: auth.rs  chat.rs  connecting.rs  countdown.rs  difficulty.rs  game.rs  startup.rs  username.rs  waiting.rs
client/src/ui/: macroquad.rs  mq.rs  terminal.rs
client/src/world/: maze.rs
common/: Cargo.toml
common/src/: auth.rs  bullets.rs  chat.rs  constants.rs  input.rs  lib.rs  maze.rs  net.rs  player.rs  protocol.rs  ring.rs  snapshot.rs  time.rs
common/src/maze/: maker.rs
common/src/maze/maker/: algorithms.rs
common/src/maze/maker/algorithms/: backtrack.rs  binary_tree.rs  blobby.rs  division.rs  kruskal.rs  prim.rs  voronoi.rs  wilson.rs
docs/: 2025-12-11.md  2026-01-04.md  angles.md  architecture.md  build.md  client-architecture.md  collaboration-workflow.md  consistency.md  curiosities.md  docker.md  git-recovery.md  installation.md  local_player_netcode_plan.md  netcode.md  netcode_notes.md  netcode_plan.md  network-debugging-lesson.md  network-debugging.md  networking-debugging.md  next.md  outstanding-issues.md  questions.md  security.md  state-machines.md  state_machine_input_changes.md  structure.md  time_sync_plan.md
scripts/: Build-Windows.ps1  bundle-macos.sh  macos-bundle.sh  reset-to-origin-main.sh  with-fullscreen.sh
server/: Cargo.toml
server/src/: input.rs  lib.rs  main.rs  maze.rs  net.rs  player.rs  run.rs  state.rs  state_handlers.rs  test_helpers.rs
server/src/maze/: maker.rs
server/src/maze/maker/algorithms/: wilson.rs
server/src/state_handlers/: countdown.rs  difficulty.rs  game.rs  lobby.rs
server/tests/: chat.rs  chat_integration.rs
shared/: Cargo.toml
shared/src/: auth.rs  chat.rs  consts.rs  input.rs  lib.rs  math.rs  maze.rs  net.rs  player.rs  protocol.rs  snapshot.rs  time.rs
shared/src/maze/: maker.rs
shared/src/maze/maker/algorithms/: backtrack.rs
