[workspace]
members = ["client", "server", "common"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
common = { path = "./common" }
rand = "0.9.2"
renet = "1.2.0"
renet_netcode = "1.2.0"
crossterm = "0.29.0"
glam = { version = "0.27.0", features = ["serde"] }
