[package]
name = "client"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true

[[bin]]
name = "ByAThread"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
crossterm = { workspace = true }
rand = { workspace = true }
renet = { workspace = true }
renet_netcode = { workspace = true }
bincode = { workspace = true }
macroquad = { version = "0.4.14", features = ["audio"] }
dirs = "5.0"

# To embed the icon for the Windows executable.
[build-dependencies]
embed-resource = "3.0.6"

[package.metadata.deb]
name = "by-a-thread"
maintainer = "Peter Tunstall <pjtunstall@proton.me>"
copyright = "2026, Peter Tunstall"
depends = "$auto"
section = "games"
priority = "optional"
assets = [
    ["target/release/ByAThread", "usr/lib/by-a-thread/ByAThread", "755"],
    ["icon.png", "usr/share/icons/hicolor/256x256/apps/by-a-thread.png", "644"],
    ["by-a-thread.desktop", "usr/share/applications/by-a-thread.desktop", "644"],
    ["assets/fonts/PF Hellenica Serif Pro Bold.ttf", "usr/lib/by-a-thread/fonts/PF Hellenica Serif Pro Bold.ttf", "644"],
    ["assets/fonts/NotoSerifBold-MmDx.ttf", "usr/lib/by-a-thread/fonts/NotoSerifBold-MmDx.ttf", "644"],
["assets/fonts/LICENSE.txt", "usr/lib/by-a-thread/fonts/LICENSE.txt", "644"],
        ["assets/images/bull.png", "usr/lib/by-a-thread/images/bull.png", "644"],
    ["assets/images/ball.png", "usr/lib/by-a-thread/images/ball.png", "644"],
    ["assets/images/griffin.png", "usr/lib/by-a-thread/images/griffin.png", "644"],
    ["assets/images/rust-blue.png", "usr/lib/by-a-thread/images/rust-blue.png", "644"],
    ["assets/images/rust-white.png", "usr/lib/by-a-thread/images/rust-white.png", "644"],
    ["assets/sfx/bell.wav", "usr/lib/by-a-thread/sfx/bell.wav", "644"],
    ["assets/sfx/clang.wav", "usr/lib/by-a-thread/sfx/clang.wav", "644"],
    ["assets/sfx/deep_clang.wav", "usr/lib/by-a-thread/sfx/deep_clang.wav", "644"],
    ["assets/sfx/gun.wav", "usr/lib/by-a-thread/sfx/gun.wav", "644"],
    ["assets/sfx/shatter.wav", "usr/lib/by-a-thread/sfx/shatter.wav", "644"],
    ["../LICENSE", "usr/share/doc/by-a-thread/LICENSE", "644"],
    ["../CREDITS.md", "usr/share/doc/by-a-thread/CREDITS.md", "644"]
]