[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
crossterm = { workspace = true }
glam = { workspace = true }
rand = { workspace = true }
renet = { workspace = true }
renet_netcode = { workspace = true }
ctrlc = "3.5.1"
bincode = { version = "2.0.1", features = ["serde"] }
