[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
crossterm = { workspace = true }
glam = { workspace = true }
rand = { workspace = true }
renet = { workspace = true }
renet_netcode = { workspace = true }
bincode = { workspace = true }
ctrlc = "3.5.1"